--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,5 +22,6 @@
     <h1>{{movieData.Title}}</h1>
     <h2>Director:{{movieData.Director}}</h2>
   </div>
+  <app-searchtitle></app-searchtitle>
 </div>
 </div>
