--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,20 @@
-<div class="conatiner">
-  <h1>Movie Finder</h1>
-  <form>
-    <div class="form-group">
-      <input type="text" name="movie-name" class="form-control" #moviename placeholder="Enter movie name">
- </div>
- <button (click)="getMovieDetails(moviename.value)" type="submit" class="btn btn-primary mt-2">Get Movie Details</button>
- </form>
-
- <div class="row bg-light mt-4 pt-4" *ngIf="movieData">
-  <div class="col-sm-4">
-
-  <div>
-  <h3>{{movieData.Error}}</h3>
+<div class="container">
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+        <a class="nav-link" routerLink="/" routerLinkActive="">Home</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" routerLink="search" routerLinkActive="active">Search</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" routerLink="about" routerLinkActive="active">About</a>
+        </li>
+      </ul>
+    </div>
   </div>
- <div *ngIf="movieData.Title">
-  <img src="{{movieData.Poster}}">
- </div>
-</div>
-<div class="col-sm-8">
-  <div *ngIf="movieData.Title">
-    <h1>{{movieData.Title}}</h1>
-    <h2>Director:{{movieData.Director}}</h2>
-  </div>
-  <app-searchtitle></app-searchtitle>
-</div>
+</nav>
+<router-outlet></router-outlet>
 </div>
